--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,58 @@
 @media (max-width: 480px) {
 
-    /*Global Styles*/
-    body { 
-        position: relative;
+  /*Global Styles*/
+  body { 
+    position: relative;
+  }
+
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+
+  /*Navigation Bar*/
+
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: rgb(181, 181, 181);
+  }
+
+  .navlinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    gap: 30px;
+    margin: 0;
+     padding: 10px 18px;   
+    list-style: none;
+    width: fit-content;
+    margin-inline: auto;   
+  }
+
+  .navlinks a {
+    display: flex;         
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    font-size: 13px;        
+    padding: 6px 15px;
+    text-decoration: none;
+    color: black;
+  }
+
+  .navlinks a:hover {
+    color: #18831b;
     }
 
-    html, body {
-        margin: 0;
-        padding: 0;
-    }
+  .navlinks a.active {
+    border-radius: 20px;
+    color: white;
+  }
 
-    .navbar {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      background-color: rgb(181, 181, 181);
-    }
 
-    .navlinks {
-      display: flex;
-      justify-content: center;
-      align-items: center;   
-      gap: 30px;
-      margin: 0;
-      padding: 10px 18px;   
-      list-style: none;
-      width: fit-content;
-      margin-inline: auto;   
-    }
-
-    .navlinks a {
-      display: flex;         
-      align-items: center;
-      justify-content: center;
-      line-height: 1;
-      font-size: 13px;        
-      padding: 6px 15px;
-      text-decoration: none;
-      color: black;
-    }
-
-    .navlinks a:hover {
-      color: #18831b;
-    }
-
-    .navlinks a.active {
-      border-radius: 20px;
-      color: white;
-    }
 
 }
