--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,13 @@
     font-size: 24px;
   }
 
-  .indeximg1 {
+  .indexh2 {
+    font-size: 18px;
+    text-align: center;
+    margin: 20px;
+  }
+
+  .indeximg {
     width: 300px;
     height: auto;
     display: block;
@@ -71,11 +77,9 @@
     margin-bottom: 50px;
   }
 
-  .indexh2 {
-    font-size: 18px;
-    text-align: center;
-    margin: 20px;
-  }
+
+  /*Home Page first half*/
+
 
   .FoodOptions1 {
     list-style: none;
@@ -95,7 +99,7 @@
     align-items: center;
     max-width: 100px;
     width: 100%;
-
+    margin-bottom: 30px;
   }
 
   .FoodOptions1 img {
@@ -121,6 +125,57 @@
     text-align: center;
     margin: 0;
   }
+
+
+  /*Home Page second half*/
+
+
+  .FoodOptions2 {
+    list-style: none;
+    gap: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+
+  .FoodOptions2 li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100px;
+    width: 100%;
+
+  }
+
+  .FoodOptions2 img {
+    width: 80px;
+    height: auto;
+    margin-bottom: 2px;
+  }
+
+  .FoodOptions2 a {
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    border: solid 1px rgb(181, 181, 181);
+    background-color: rgb(181, 181, 181);
+    padding: 8px;
+    border-radius: 5cm;
+    margin-top: 5px;
+  }
+
+  .FoodOptions2 p {
+    font-size: 12px;
+    text-align: center;
+    margin: 0;
+  }
+
 
 
 
