--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
     align-items: center;   
     gap: 30px;
     margin: 0;
-     padding: 10px 18px;   
+   padding: 10px 18px;   
     list-style: none;
     width: fit-content;
     margin-inline: auto;   
@@ -77,11 +77,7 @@
     margin-bottom: 50px;
   }
 
-
-  /*Home Page first half*/
-
-
-  .FoodOptions1 {
+  .FoodOptions {
     list-style: none;
     gap: 20px;
     display: flex;
@@ -92,7 +88,7 @@
     margin: 0;
   }
 
-  .FoodOptions1 li {
+  .FoodOptions li {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -102,81 +98,89 @@
     margin-bottom: 30px;
   }
 
-  .FoodOptions1 img {
+  .FoodOptions img {
     width: 80px;
     height: auto;
     margin-bottom: 2px;
   }
 
-  .FoodOptions1 a {
+  .FoodOptions a {
     text-decoration: none;
     color: white;
     font-size: 12px;
     text-align: center;
     border: solid 1px rgb(181, 181, 181);
     background-color: rgb(181, 181, 181);
-    padding: 8px;
+    padding: 8px 15px;
     border-radius: 5cm;
     margin-top: 5px;
   }
 
-  .FoodOptions1 p {
+  .FoodOptions p {
     font-size: 12px;
     text-align: center;
     margin: 0;
   }
 
 
-  /*Home Page second half*/
+  /*Menu Page*/
 
-
-  .FoodOptions2 {
-    list-style: none;
-    gap: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    margin-bottom: 30px;
+  .FoodOptions button {
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    border: solid 1px rgb(181, 181, 181);
+    background-color: rgb(181, 181, 181);
+    padding: 8px 15px;
+    border-radius: 5cm;
+    margin-top: 5px;
   }
 
-  .FoodOptions2 li {
+  button:active {
+    background-color: white;
+    color: rgb(181, 181, 181);
+  }
+
+  /*Order Page*/
+
+  #ordercart{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 100px;
-    width: 100%;
-
+    margin-top: 20px;
   }
 
-  .FoodOptions2 img {
-    width: 80px;
-    height: auto;
-    margin-bottom: 2px;
+  #cart {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
-  .FoodOptions2 a {
-    text-decoration: none;
+  #ordercart button {
+    margin-top: 15px;
     color: white;
     font-size: 12px;
     text-align: center;
     border: solid 1px rgb(181, 181, 181);
     background-color: rgb(181, 181, 181);
-    padding: 8px;
-    border-radius: 5cm;
+    padding: 8px 15px;
+    border-radius: 1cm;
     margin-top: 5px;
   }
-
-  .FoodOptions2 p {
-    font-size: 12px;
-    text-align: center;
-    margin: 0;
+  
+  #ordercart button:active {
+    background-color: white;
+    color: rgb(181, 181, 181);
   }
 
+  #ordercart a {
+    margin-top: 25px;
+    color: black;
+  }
 
-
-
+  #receipt {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  
 }
